# coc-api

./: .gitignore  README.md  debug  main.py  pyproject.toml  requments.txt
api/Auth/SignUp/: __init__.py
api/auth/: login.py  sign_up.py
api/auth/LogIn/: __init__.py
api/auth/SignUp/: __init__.py
api/auth/log_in/: __init__.py
api/characters/new_character/: __init__.py
api/create_character/record_basic_setting/: __init__.py
api/gaming/roll/: __init__.py
api/log_in/: __init__.py
api/sign_up/: __init__.py
common/auth/: __init__.py
common/roll/: __init__.py
configs/database/: __init__.py  connection.py
configs/database/user_list/: __init__.py
database/: __init__.py
dependencies/get_plugins/: __init__.py
dependencies/plugins/: database.py  get_env.py  security.py
depends/create_access_token/: __init__.py
depends/token_log_in/: __init__.py
model/: database_model.py  pydantic_model.py
